--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				I passionately love my boyfriend.
 			</p>
 			<hr />
-			<center style='font-size: 0.93em; white-space: pre;'><a href='https://github.com/IceCreamTray'>GitHub</a>   |   <a href='https://icecubetray.github.io'>My boyfriend's page</a></center>
+			<center style='font-size: 0.93em; white-space: pre;'><a href='https://github.com/IceCreamTray'>GitHub</a>   |   <a href='https://icecreamtray.github.io/drawing/'>My drawing page</a>   |   <a href='https://icecubetray.github.io'>My boyfriend's page</a></center>
 		</div>
 	</body>
 </html>
